# sgumlp

./: CITATION.cff  LICENSE  README.md  pyproject.toml
data/config/: augsburg.dataset.json  berlin.dataset.json  cross_location.experiment.json  houston.dataset.json  replication.experiment.json
src/: config.py  data.py  models.py  run.py
src/experiments/: config.py  data.py  experiments.py  metrics.py  models.py  run.py  train.py
src/sgu_mlp/: __init__.py  cli.py  config.py  data.py  experiments.py  metrics.py  models.py  train.py
tests/: conftest.py  test_cli.py  test_config.py  test_data.py  test_models.py  test_training.py
tests/experiments/: test_config.py  test_data.py  test_experiments.py  test_metrics.py  test_models.py  test_run.py
tests/sgu_mlp/: test_models.py
