[tool.poetry]
name = "sgu-mlp"
version = "0.1.0"
description = "Implementation of the SGU-MLP Architecture (mostly) as described in the paper \"Spatial Gated Multi-Layer Perceptron for Land Use and Land Cover Mapping\"."
authors = ["Marius Hamacher <marius.hamacher@outlook.de>"]
readme = "README.md"
packages = [
    {include = "sgu_mlp", from = "src"}
]


[project]
name = "sgu-mlp"

[project.scripts]
replication = 'sgu_mlp.cli:cv_experiment'
cross_location = 'sgu_mlp.cli:ood_experiment'
download_datasets = 'sgu_mlp.cli:download_datasets'

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchvision = "^0.20.1"
numpy = "^2.2.1"
scipy = "^1.15.0"
scikit-learn = "^1.6.0"
pillow = "^11.1.0"
lightning = "^2.5.0.post0"
pandas = "^2.2.3"
torchmetrics = "^1.6.1"
gdown = { version = "^5.2.0", optional = true }
patool = { version = "^3.1.0", optional = true }
mlflow = "^2.20.0"
rasterio = "^1.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.123.7"
black = "^24.10.0"

[tool.poetry.extras]
experiments = ["gdown", "patool"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
