[tool.poetry]
name = "sgu-mlp"
version = "0.1.0"
description = "Implementation of the SGU-MLP Architecture (mostly) as described in the paper \"Spatial Gated Multi-Layer Perceptron for Land Use and Land Cover Mapping\"."
authors = ["Marius Hamacher <marius.hamacher@outlook.de>"]
readme = "README.md"
packages = [
    {include = "sgu_mlp", from = "src"},
    {include = "experiments", from = "src"}
]

[tool.poetry.scripts]
replication = 'experiments.experiments:cv_experiment'
cross_location = 'experiments.experiments:ood_experiment'
download_datasets = 'experiments.experiments:download_datasets'
mulc_vbwva = 'experiments.experiments:mulc_vbwva_experiment'

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.123.7"
black = "^24.10.0"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.experiments.dependencies]
seaborn = "^0.13.2"
scipy = "^1.15.0"
scikit-learn = "^1.6.0"
pillow = "^11.1.0"
pandas = "^2.2.3"
torchmetrics = "^1.6.1"
mlflow = "^2.20.0"
rasterio = "^1.4.3"
torchvision = "^0.20.1"
lightning = "^2.5.0.post0"
gdown = "^5.2.0"
patool = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
