[tool.poetry]
name = "sgu-mlp"
version = "0.1.1"
description = "Implementation of the SGU-MLP Architecture (mostly) as described in the paper \"Spatial Gated Multi-Layer Perceptron for Land Use and Land Cover Mapping\"."
authors = ["Marius Hamacher <marius.hamacher@outlook.de>"]
readme = "README.md"
packages = [
    {include = "sgu_mlp", from = "src"},
    {include = "experiments", from = "src"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: GPU",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
replication = 'experiments.experiments:cv_experiment'
cross_location = 'experiments.experiments:ood_experiment'
download_datasets = 'experiments.experiments:download_datasets'
mulc = 'experiments.experiments:mulc_experiment'

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
numpy = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
hypothesis = "^6.123.7"
black = "^24.10.0"

[tool.poetry.group.experiments]
optional = true

[tool.poetry.group.experiments.dependencies]
seaborn = "^0.13.2"
scipy = "^1.15.0"
scikit-learn = "^1.6.0"
pillow = "^11.1.0"
pandas = "^2.2.3"
torchmetrics = "^1.6.1"
mlflow = "^2.20.0"
rasterio = "^1.4.3"
torchvision = "^0.20.1"
lightning = "^2.5.0.post0"
gdown = "^5.2.0"
patool = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
